# canbus_autopilot

./: LICENSE  README.md
hardware/: capteur-cache.lib  capteur-rescue.lib  capteur.cmp  capteur.kicad_pcb  capteur.kicad_pro  capteur.kicad_sch  capteur.lst  capteur.net  capteur.pro  capteur.sch  clk-capteur-cache.lib  clk-capteur-rescue.lib  clk-capteur.cmp  clk-capteur.kicad_pcb  clk-capteur.kicad_pro  clk-capteur.kicad_sch  clk-capteur.net  clk-capteur.pro  clk-capteur.sch  clk-command-cache.lib  clk-command-rescue.lib  clk-command.cmp  clk-command.kicad_pcb  clk-command.kicad_pro  clk-command.kicad_sch  clk-command.net  clk-command.pro  clk-command.sch  clk-control-main-cache.lib  clk-control-main-rescue.lib  clk-control-main.cmp  clk-control-main.kicad_pcb  clk-control-main.kicad_pro  clk-control-main.kicad_sch  clk-control-main.net  clk-control-main.pro  clk-control-main.sch  command-cache.lib  command-rescue.lib  command.cmp  (+29 more)
hardware/cad/: bouton-3mm.dxf  bouton-3mm.scad  bouton-3mm.stl  wm0_cover.scad
hardware/remote-control/: remote-control-cache.lib  remote-control-rescue.lib  remote-control.kicad_pcb  remote-control.kicad_pro  remote-control.kicad_sch  remote-control.net  remote-control.pro  remote-control.sch  sym-lib-table
software/canhost/: Makefile  canhost_mute.c
software/capteur/: Makefile  autopilot_i2c.c  autopilot_i2c.h  fsadd.s  fsmul.s  fssub.s  l3dg20reg.h  lsm303.h  main.c  marg_filter.c  marg_filter.h  mullong.s  nmea2000_user.h  pic18f26k80.lkr
software/command/: Makefile  autopilot_serial.h  main.c  nmea2000_user.h  pic18f26k80.lkr  serial.c
software/display/: Makefile  autopilot_serial.h  autopilot_spi.c  autopilot_spi.h  font10x16.c  font10x16.h  font20x24.c  font20x24.h  font5x8.c  font5x8.h  main.c  menu.c  menu.h  nmea2000_user.h  pic18f26k80.lkr  serial.c
software/lib/eeprom/: eeprom.c  eeprom.h
software/lib/nmea2000/: nmea2000.c  nmea2000.h  nmea2000_pgn.h
software/remote/: Makefile  autopilot_serial.h  main.c  nmea2000_user.h  pic18f26k80.lkr  serial.c
software/watchcan_beep/: watchcan_beep  watchcan_beep.c
software/watchcan_mob/: watchcan_mob.c
software/wxpilot/: CMakeLists.txt  loadpilotparams.cpp  loadpilotparams.h  main.cpp  pilotparams.cpp  pilotparams.h  pilotstatus.cpp  pilotstatus.h  savepilotparams.cpp  savepilotparams.h  wxpilot.h
software/wxpilot/N2K/: NMEA2000.cpp  NMEA2000.h  NMEA2000Properties.cpp  NMEA2000Properties.h  NMEA2000PropertiesDialog.cpp  NMEA2000PropertiesDialog.h  nmea2000_attitude_rx.cpp  nmea2000_defs.h  nmea2000_defs_rx.h  nmea2000_defs_tx.h  nmea2000_frame.h  nmea2000_rateofturn_rx.cpp  nmea2000_rxtx.cpp  private_command_factors.cpp  private_command_status_rx.cpp  private_remote_control_rx.cpp
software/wxpilot/widgets/: wxCompass.cpp  wxCompass.h  wxHorizGauge.cpp  wxHorizGauge.h  wxNumberControl.cpp  wxNumberControl.h
